Bug 882008 - OdinMonkey: fix subtraction to take doublish, rm Use (r=bbouvier)